# alpaca-bot

./: .env.example  .env.pi  .gitignore  CUSTOM_PORTFOLIO_FEATURE.md  DEPLOYMENT_GUIDE.md  OPTIMIZATION_SUMMARY.md  PI_MANUAL_RUN.md  PI_TROUBLESHOOTING.md  README.md  README_DEPLOYMENT.md  deploy_to_pi.sh  git_deploy.sh  install_pi.sh  manual_deploy.sh  pyproject.toml  quick_pi_setup.sh  reset_circuit_breaker.py  run_bot_pi.sh  test_credentials.py  test_custom_portfolio_feature.py  test_fixed_amount.py  test_fixed_capital_tracking.py  test_position_display_fix.py
.trae/rules/: project_rules.md
requirements/: base.txt  dev.txt  pi.txt  prod.txt
src/alpaca_bot/: main.py  main_headless.py
src/alpaca_bot/config/: pi_config.py  settings.py
src/alpaca_bot/gui/: config_panel.py  data_display.py  main_window.py  performance_display.py  stock_selector.py  trading_panel.py
src/alpaca_bot/models/: stock.py  trade.py
src/alpaca_bot/services/: alpaca_client.py
src/alpaca_bot/strategies/: scalping_strategy.py
src/alpaca_bot/utils/: error_handler.py  logging_utils.py  market_utils.py  technical_analysis.py
tests/: test_fixed_capital_tracking.py
